- [FRONTEND] Remove old conf when changing frontend mode to avoid duplicate ruleset
- [MANAGE] Allow force toggle into maintenance
- [CLUSTER_JOIN] Correctly reload Haproxy internal configurations on every node
- [SYSTEM] [API] Add missing trailing slash to the /api/system/pki/get_ca/ endpoint
- [RSYSLOG] [CONFIGURATION] Improve inputs' configuration generation on clustered nodes

## [2.9.1] - 2023-08-16
### Fixed
- [API_PARSER] [SENTINEL_ONE_MOBILE] Fix query params and API uri
- [FRONTEND] timeouts on save and wrong endpoints


## [2.9.0] - 2023-07-20
### Removed
- [LOG_FORWARDER] [ELASTICSEARCH] RateLimit settings
### Added
- [API_PARSER] New API parser SentinelOne Mobile
- [API_PARSER] New API parser CSC DomainManager
- [LOG_FORWARDER] Disk-assisted queues for reliability
- [PORTAL] [IDP] Refresh token support through OAuth2 flow
### Changed
- [VOCABULARY] Replace 'slave' word uses with 'replica'
- [NETWORK] Improve the way Node IPs are updated on disk
- [NETIF] [API] Only return from API call when refresh has been finished
- [DEPENDENCIES] Python dependencies upgrade
    - django 3.2.19 -> 3.2.20
    - cryptography 41.0.1 -> 41.0.2
### Fixed
- [PORTAL] [OPENID] Improve error returns and code quality
- [SYSTEM] [CERTIFICATES] Protect used certificates when attempted to be deleted
- [SYSTEM] [CERTIFICATES] Reload HAProxy on certificate change
- [ACLS] Rebuild HAProxy conf on ACL change
- [LOGFORWARDER] [ELASTICSEARCH] Enable ELS>=8 compatibility
- [LOGFORWARDER] [ELASTICSEARCH] Ensure index patterns are kept to lowercase
- [LOGFORWARDER] [ELASTICSEARCH] Avoid newline problems in generated configurations
- [CLUSTER_JOIN] New node couldn't resolve all other nodes' name and IP
- [CLUSTER_JOIN] New node missed an initial Rsyslog configuration file
- [NODE] [CONFIGURATION] Correctly update rc.conf when editing a Node on GUI/API
- [REFRESH_NIC] Correctly get DHCP-enabled interfaces' IP